--- a/src/index.scss
+++ b/src/index.scss
@@ -5,93 +5,131 @@ $white: #ffffff;
 $your-pink: #ffcccc;
 
 html {
-    height: 95%;
+  height: 95%;
 }
 
 body {
-    font-size: 16px;
-    font-family: Roboto, sans-serif;
-    background-color: $salmon;
-    height: 100%;
+  font-size: 16px;
+  font-family: Roboto, sans-serif;
+  background-color: $salmon;
+  height: 100%;
 }
 
 #root {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
 }
 
-.form {
-    height: 4.25em;
-    border-radius: 6.25em;
-    background-color: $white;
-    width: 80%;
-    padding: 0.625em;
-    box-sizing: border-box;
-    box-shadow: 0 0.125em 0.3125em rgba(0, 0, 0, 0.3);
-    display: flex;
-    justify-content: center;
+.loader {
+  width: 28px;
+  height: 28px;
+  border: 2px solid $white;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
 
-    &__button {
-        color: inherit;
-        padding: 0;
-        height: 100%;
-        width: 5em;
-        background-color: $salmon;
-    }
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .form__input,
 .form__button {
-    font: inherit;
-    border: 0;
-    outline: 0;
-    border-radius: 5em;
-    box-sizing: border-box;
+  font: inherit;
+  border: 0;
+  outline: 0;
+  border-radius: 5em;
+  box-sizing: border-box;
 }
 
-.form__input {
-    font-size: 1.75em;
-    opacity: 0;
-    visibility: hidden;
-    transform: scale(0.7);
-}
+.form {
+  height: 4.25em;
+  border-radius: 6.25em;
+  background-color: $white;
+  width: 80%;
+  padding: 0.625em;
+  box-sizing: border-box;
+  box-shadow: 0 0.125em 0.3125em rgba(0, 0, 0, 0.3);
+  display: flex;
 
-.form__input {
-    color: $your-pink;
+  &__button {
+    color: $white;
+    font-weight: bold;
+    padding: 0;
     height: 100%;
-    width: 100%;
-    padding: 0 0.714em;
+    width: 5em;
+    background-color: $salmon;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+}
 
-    &::placeholder {
-        color: currentColor;
+.form__input {
+  font-size: 1.75em;
+}
+
+.form__input {
+  color: $your-pink;
+  height: 100%;
+  width: 100%;
+  padding: 0 0.714em;
+
+  &::placeholder {
+    color: currentColor;
+  }
+
+  &:required:valid {
+    color: $salmon;
+
+    + .form__buttonLabel {
+      color: $white;
+
+      &::before {
+        pointer-events: initial;
+      }
     }
-
-    &:required:valid {
-        color: $salmon;
-
-        + .form__buttonLabel {
-            color: $white;
-
-            &::before {
-                pointer-events: initial;
-            }
-        }
-    }
+  }
 }
 
 .list {
-    margin-top: 1em;
-    height: 80%;
-    border-radius: 3.25em;
-    background-color: $white;
-    width: 80%;
-    padding: 0.625em;
-    box-sizing: border-box;
-    box-shadow: 0 0.125em 0.3125em rgba(0, 0, 0, 0.3);
-    display: flex;
-    justify-content: center;
+  margin-top: 1em;
+  height: 80%;
+  border-radius: 3.25em;
+  background-color: $white;
+  width: 48%;
+  padding: 1.625em;
+  box-sizing: border-box;
+  box-shadow: 0 0.125em 0.3125em rgba(0, 0, 0, 0.3);
+
+  &-item {
+    padding: 6px 8px;
+    border-radius: 1.25em;
+
+    &:hover {
+      background-color: $cornflower-lilac;
+      cursor: pointer;
+    }
+
+    &._active {
+      background-color: $cornflower-lilac;
+    }
+  }
 }
 
-
+.info {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  height: 100%;
+}
