feat: add error boundary

--- a/src/index.scss
+++ b/src/index.scss
@@ -72,6 +72,14 @@ body {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+
+    &._error {
+      color: $black;
+      background-color: $white;
+      height: fit-content;
+      width: max-content;
+      padding: 0.625em;
+    }
   }
 }
 
@@ -132,4 +140,9 @@ body {
   justify-content: space-between;
   width: 80%;
   height: 100%;
+}
+
+.custom-error-message {
+  color: $white;
+  margin-bottom: 4px;
 }
