--- a/src/index.scss
+++ b/src/index.scss
@@ -1,49 +1,23 @@
-$black: #000000;
-$cornflower-lilac: #ffaea9;
-$salmon: #ff7b73;
-$white: #ffffff;
-$your-pink: #ffcccc;
+@import 'colors';
 
 html {
-  height: 95%;
+  height: 100%;
 }
 
 body {
   font-size: 16px;
   font-family: Roboto, sans-serif;
-  background-color: $salmon;
   height: 100%;
+  margin: 0;
 }
 
 #root {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   height: 100%;
 }
 
-.loader {
-  width: 28px;
-  height: 28px;
-  border: 2px solid $white;
-  border-bottom-color: transparent;
-  border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-}
-
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.form__input,
-.form__button {
+.input,
+.button {
   font: inherit;
   border: 0;
   outline: 0;
@@ -51,98 +25,6 @@ body {
   box-sizing: border-box;
 }
 
-.form {
-  height: 4.25em;
-  border-radius: 6.25em;
-  background-color: $white;
-  width: 80%;
-  padding: 0.625em;
-  box-sizing: border-box;
-  box-shadow: 0 0.125em 0.3125em rgba(0, 0, 0, 0.3);
-  display: flex;
-
-  &__button {
-    color: $white;
-    font-weight: bold;
-    padding: 0;
-    height: 100%;
-    width: 5em;
-    background-color: $salmon;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-
-    &._error {
-      color: $black;
-      background-color: $white;
-      height: fit-content;
-      width: max-content;
-      padding: 0.625em;
-    }
-  }
-}
-
-.form__input {
-  font-size: 1.75em;
-}
-
-.form__input {
-  color: $your-pink;
-  height: 100%;
-  width: 100%;
-  padding: 0 0.714em;
-
-  &::placeholder {
-    color: currentColor;
-  }
-
-  &:required:valid {
-    color: $salmon;
-
-    + .form__buttonLabel {
-      color: $white;
-
-      &::before {
-        pointer-events: initial;
-      }
-    }
-  }
-}
-
-.list {
-  margin-top: 1em;
-  height: 80%;
-  border-radius: 3.25em;
-  background-color: $white;
-  width: 48%;
-  padding: 1.625em;
-  box-sizing: border-box;
-  box-shadow: 0 0.125em 0.3125em rgba(0, 0, 0, 0.3);
-
-  &-item {
-    padding: 6px 8px;
-    border-radius: 1.25em;
-
-    &:hover {
-      background-color: $cornflower-lilac;
-      cursor: pointer;
-    }
-
-    &._active {
-      background-color: $cornflower-lilac;
-    }
-  }
-}
-
-.info {
-  display: flex;
-  justify-content: space-between;
-  width: 80%;
-  height: 100%;
-}
-
-.custom-error-message {
-  color: $white;
-  margin-bottom: 4px;
+.button {
+  cursor: pointer;
 }
