--- a/src/components/organization-details/OrganizationDetails.scss
+++ b/src/components/organization-details/OrganizationDetails.scss
@@ -2,10 +2,14 @@
 
 .organization-details {
   width: 60%;
-  height: max-content;
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
+
+  &._loading {
+    justify-content: center;
+  }
 
   &__title {
     color: $salmon;
