--- a/src/components/organizations-list/OrganizationsList.scss
+++ b/src/components/organizations-list/OrganizationsList.scss
@@ -15,6 +15,9 @@
   &-item {
     padding: 6px 8px;
     border-radius: 1.25em;
+    display: block;
+    color: inherit;
+    text-decoration: none;
 
     &:hover {
       background-color: $cornflower-lilac;
