--- a/src/components/organizations-bar/OrganizationsBar.scss
+++ b/src/components/organizations-bar/OrganizationsBar.scss
@@ -5,6 +5,7 @@
   background-color: $salmon;
   padding: 8px;
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
   justify-content: space-between;
 
