--- a/src/components/error-boundary/ErrorBoundary.scss
+++ b/src/components/error-boundary/ErrorBoundary.scss
@@ -1,6 +1,12 @@
 .error-boundary {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
   &__message {
-    color: white;
     margin-bottom: 4px;
   }
 }
