--- a/src/components/organizations-bar/OrganizationsBar.scss
+++ b/src/components/organizations-bar/OrganizationsBar.scss
@@ -8,6 +8,9 @@
   flex-grow: 1;
   flex-direction: column;
   justify-content: space-between;
+  -webkit-box-shadow: 4px 1px 8px 0px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 4px 1px 8px 0px rgba(34, 60, 80, 0.2);
+  box-shadow: 4px 1px 8px 0px rgba(34, 60, 80, 0.2);
 
   & > *:not(:last-child) {
     margin-bottom: 8px;
