--- a/src/components/organizations-list/OrganizationsList.scss
+++ b/src/components/organizations-list/OrganizationsList.scss
@@ -13,6 +13,12 @@
     align-items: center;
   }
 
+  &._empty {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   &-item {
     padding: 6px 8px;
     border-radius: 1.25em;
